ingress-prowlarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: mediaserver
spec:
  ingressClassName: traefik-internal
  rules:
  - host: prowlarr.animaniacs.farh.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  prowlarr
            port:
              number: 9696
  tls:
  - hosts:
    - prowlarr.animaniacs.farh.net
    secretName: farh-net-cert-letsencrypt
